--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>FoodApp Frontend</title>
+    <style>
+        body {
+            background-color: beige;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top: 50px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 40px;
+            font-size: 2.5em;
+        }
+
+        .card {
+            background-color: #fff8dc;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            padding: 20px;
+            margin: 20px auto;
+            max-width: 400px;
+            text-align: center;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        pre {
+            margin-top: 20px;
+            text-align: left;
+            background-color: #fdf5e6;
+            padding: 15px;
+            border-radius: 8px;
+            overflow-x: auto;
+        }
+    </style>
 </head>
 <body>
     <h1>🍔 Welcome to FoodApp</h1>
-    <button onclick="getMenu()">Get Menu</button>
-    <button onclick="createOrder()">Place Order</button>
-    <button onclick="getDeliveryStatus()">Check Delivery</button>
+
+    <div class="card">
+        <h2>Restaurant Service</h2>
+        <button onclick="getMenu()">Get Menu</button>
+    </div>
+
+    <div class="card">
+        <h2>Order Service</h2>
+        <button onclick="createOrder()">Place Order</button>
+    </div>
+
+    <div class="card">
+        <h2>Delivery Service</h2>
+        <button onclick="getDeliveryStatus()">Check Delivery</button>
+    </div>
+
     <pre id="output"></pre>
 
     <script>
